levels/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> prog
Rule 1     prog -> empty
Rule 2     prog -> func prog
Rule 3     func -> DEF type iden LPAREN flist RPAREN func_choice
Rule 4     func -> DEF type iden LPAREN error RPAREN func_choice
Rule 5     func_choice -> LBRACE body RBRACE
Rule 6     func_choice -> RETURN expr SEMICOLON
Rule 7     body -> empty
Rule 8     body -> stmt body
Rule 9     body -> error body
Rule 10    stmt -> expr SEMICOLON
Rule 11    stmt -> error SEMICOLON
Rule 12    stmt -> defvar SEMICOLON
Rule 13    stmt -> IF LPAREN expr RPAREN stmt else_choice
Rule 14    stmt -> IF LPAREN error RPAREN stmt else_choice
Rule 15    else_choice -> empty
Rule 16    else_choice -> ELSE stmt
Rule 17    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 18    stmt -> WHILE LPAREN error RPAREN stmt
Rule 19    stmt -> FOR LPAREN iden ASSIGN expr TO expr RPAREN stmt
Rule 20    stmt -> FOR LPAREN iden ASSIGN error TO expr RPAREN stmt
Rule 21    stmt -> RETURN expr SEMICOLON
Rule 22    stmt -> LBRACE body RBRACE
Rule 23    stmt -> func
Rule 24    defvar -> VAR type iden defvar_choice
Rule 25    defvar -> VAR error iden defvar_choice
Rule 26    defvar_choice -> empty
Rule 27    defvar_choice -> ASSIGN expr
Rule 28    flist -> empty
Rule 29    flist -> type iden
Rule 30    flist -> type iden COMMA flist
Rule 31    clist -> empty
Rule 32    clist -> expr
Rule 33    clist -> expr COMMA clist
Rule 34    type -> INT_TYPE
Rule 35    type -> VECTOR_TYPE
Rule 36    type -> STR_TYPE
Rule 37    type -> NULL_TYPE
Rule 38    expr -> expr LBRACKET expr RBRACKET
Rule 39    expr -> expr LBRACKET error RBRACKET
Rule 40    expr -> LBRACKET clist RBRACKET
Rule 41    expr -> LBRACKET error RBRACKET
Rule 42    expr -> expr QUESTIONMARK expr COLON expr
Rule 43    expr -> expr QUESTIONMARK expr error expr
Rule 44    expr -> expr ASSIGN expr
Rule 45    expr -> expr PLUS expr
Rule 46    expr -> expr MINUS expr
Rule 47    expr -> expr TIMES expr
Rule 48    expr -> expr DIVIDE expr
Rule 49    expr -> expr MOD expr
Rule 50    expr -> expr GT expr
Rule 51    expr -> expr LT expr
Rule 52    expr -> expr EQUAL expr
Rule 53    expr -> expr GTE expr
Rule 54    expr -> expr LTE expr
Rule 55    expr -> expr NOT_EQUAL expr
Rule 56    expr -> expr OR expr
Rule 57    expr -> expr AND expr
Rule 58    expr -> NOT expr
Rule 59    expr -> PLUS expr
Rule 60    expr -> MINUS expr
Rule 61    expr -> iden
Rule 62    expr -> iden LPAREN clist RPAREN
Rule 63    expr -> iden LPAREN error RPAREN
Rule 64    expr -> num
Rule 65    expr -> str
Rule 66    iden -> IDENTIFIER
Rule 67    str -> STRING
Rule 68    num -> NUMBER
Rule 69    empty -> <empty>

Terminals, with rules where they appear

AND                  : 57
ASSIGN               : 19 20 27 44
COLON                : 42
COMMA                : 30 33
COMMENT              : 
DEF                  : 3 4
DIVIDE               : 48
ELSE                 : 16
EQUAL                : 52
FOR                  : 19 20
GT                   : 50
GTE                  : 53
IDENTIFIER           : 66
IF                   : 13 14
INT_TYPE             : 34
LBRACE               : 5 22
LBRACKET             : 38 39 40 41
LPAREN               : 3 4 13 14 17 18 19 20 62 63
LT                   : 51
LTE                  : 54
MINUS                : 46 60
MOD                  : 49
NOT                  : 58
NOT_EQUAL            : 55
NULL_TYPE            : 37
NUMBER               : 68
OR                   : 56
PLUS                 : 45 59
QUESTIONMARK         : 42 43
RBRACE               : 5 22
RBRACKET             : 38 39 40 41
RETURN               : 6 21
RPAREN               : 3 4 13 14 17 18 19 20 62 63
SEMICOLON            : 6 10 11 12 21
STRING               : 67
STR_TYPE             : 36
TIMES                : 47
TO                   : 19 20
VAR                  : 24 25
VECTOR_TYPE          : 35
WHILE                : 17 18
error                : 4 9 11 14 18 20 25 39 41 43 63

Nonterminals, with rules where they appear

body                 : 5 8 9 22
clist                : 33 40 62
defvar               : 12
defvar_choice        : 24 25
else_choice          : 13 14
empty                : 1 7 15 26 28 31
expr                 : 6 10 13 17 19 19 20 21 27 32 33 38 38 39 42 42 42 43 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 59 60
flist                : 3 30
func                 : 2 23
func_choice          : 3 4
iden                 : 3 4 19 20 24 25 29 30 61 62 63
num                  : 64
prog                 : 2 0
stmt                 : 8 13 14 16 17 18 19 20
str                  : 65
type                 : 3 4 24 29 30

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (69) empty -> .
    (3) func -> . DEF type iden LPAREN flist RPAREN func_choice
    (4) func -> . DEF type iden LPAREN error RPAREN func_choice

    $end            reduce using rule 69 (empty -> .)
    DEF             shift and go to state 4

    prog                           shift and go to state 1
    empty                          shift and go to state 2
    func                           shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> empty .

    $end            reduce using rule 1 (prog -> empty .)


state 3

    (2) prog -> func . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (69) empty -> .
    (3) func -> . DEF type iden LPAREN flist RPAREN func_choice
    (4) func -> . DEF type iden LPAREN error RPAREN func_choice

    $end            reduce using rule 69 (empty -> .)
    DEF             shift and go to state 4

    func                           shift and go to state 3
    prog                           shift and go to state 5
    empty                          shift and go to state 2

state 4

    (3) func -> DEF . type iden LPAREN flist RPAREN func_choice
    (4) func -> DEF . type iden LPAREN error RPAREN func_choice
    (34) type -> . INT_TYPE
    (35) type -> . VECTOR_TYPE
    (36) type -> . STR_TYPE
    (37) type -> . NULL_TYPE

    INT_TYPE        shift and go to state 7
    VECTOR_TYPE     shift and go to state 8
    STR_TYPE        shift and go to state 9
    NULL_TYPE       shift and go to state 10

    type                           shift and go to state 6

state 5

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 6

    (3) func -> DEF type . iden LPAREN flist RPAREN func_choice
    (4) func -> DEF type . iden LPAREN error RPAREN func_choice
    (66) iden -> . IDENTIFIER

    IDENTIFIER      shift and go to state 12

    iden                           shift and go to state 11

state 7

    (34) type -> INT_TYPE .

    IDENTIFIER      reduce using rule 34 (type -> INT_TYPE .)


state 8

    (35) type -> VECTOR_TYPE .

    IDENTIFIER      reduce using rule 35 (type -> VECTOR_TYPE .)


state 9

    (36) type -> STR_TYPE .

    IDENTIFIER      reduce using rule 36 (type -> STR_TYPE .)


state 10

    (37) type -> NULL_TYPE .

    IDENTIFIER      reduce using rule 37 (type -> NULL_TYPE .)


state 11

    (3) func -> DEF type iden . LPAREN flist RPAREN func_choice
    (4) func -> DEF type iden . LPAREN error RPAREN func_choice

    LPAREN          shift and go to state 13


state 12

    (66) iden -> IDENTIFIER .

    LPAREN          reduce using rule 66 (iden -> IDENTIFIER .)
    COMMA           reduce using rule 66 (iden -> IDENTIFIER .)
    RPAREN          reduce using rule 66 (iden -> IDENTIFIER .)
    SEMICOLON       reduce using rule 66 (iden -> IDENTIFIER .)
    LBRACKET        reduce using rule 66 (iden -> IDENTIFIER .)
    QUESTIONMARK    reduce using rule 66 (iden -> IDENTIFIER .)
    ASSIGN          reduce using rule 66 (iden -> IDENTIFIER .)
    PLUS            reduce using rule 66 (iden -> IDENTIFIER .)
    MINUS           reduce using rule 66 (iden -> IDENTIFIER .)
    TIMES           reduce using rule 66 (iden -> IDENTIFIER .)
    DIVIDE          reduce using rule 66 (iden -> IDENTIFIER .)
    MOD             reduce using rule 66 (iden -> IDENTIFIER .)
    GT              reduce using rule 66 (iden -> IDENTIFIER .)
    LT              reduce using rule 66 (iden -> IDENTIFIER .)
    EQUAL           reduce using rule 66 (iden -> IDENTIFIER .)
    GTE             reduce using rule 66 (iden -> IDENTIFIER .)
    LTE             reduce using rule 66 (iden -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 66 (iden -> IDENTIFIER .)
    OR              reduce using rule 66 (iden -> IDENTIFIER .)
    AND             reduce using rule 66 (iden -> IDENTIFIER .)
    RBRACKET        reduce using rule 66 (iden -> IDENTIFIER .)
    COLON           reduce using rule 66 (iden -> IDENTIFIER .)
    error           reduce using rule 66 (iden -> IDENTIFIER .)
    TO              reduce using rule 66 (iden -> IDENTIFIER .)


state 13

    (3) func -> DEF type iden LPAREN . flist RPAREN func_choice
    (4) func -> DEF type iden LPAREN . error RPAREN func_choice
    (28) flist -> . empty
    (29) flist -> . type iden
    (30) flist -> . type iden COMMA flist
    (69) empty -> .
    (34) type -> . INT_TYPE
    (35) type -> . VECTOR_TYPE
    (36) type -> . STR_TYPE
    (37) type -> . NULL_TYPE

    error           shift and go to state 16
    RPAREN          reduce using rule 69 (empty -> .)
    INT_TYPE        shift and go to state 7
    VECTOR_TYPE     shift and go to state 8
    STR_TYPE        shift and go to state 9
    NULL_TYPE       shift and go to state 10

    type                           shift and go to state 14
    flist                          shift and go to state 15
    empty                          shift and go to state 17

state 14

    (29) flist -> type . iden
    (30) flist -> type . iden COMMA flist
    (66) iden -> . IDENTIFIER

    IDENTIFIER      shift and go to state 12

    iden                           shift and go to state 18

state 15

    (3) func -> DEF type iden LPAREN flist . RPAREN func_choice

    RPAREN          shift and go to state 19


state 16

    (4) func -> DEF type iden LPAREN error . RPAREN func_choice

    RPAREN          shift and go to state 20


state 17

    (28) flist -> empty .

    RPAREN          reduce using rule 28 (flist -> empty .)


state 18

    (29) flist -> type iden .
    (30) flist -> type iden . COMMA flist

    RPAREN          reduce using rule 29 (flist -> type iden .)
    COMMA           shift and go to state 21


state 19

    (3) func -> DEF type iden LPAREN flist RPAREN . func_choice
    (5) func_choice -> . LBRACE body RBRACE
    (6) func_choice -> . RETURN expr SEMICOLON

    LBRACE          shift and go to state 23
    RETURN          shift and go to state 24

    func_choice                    shift and go to state 22

state 20

    (4) func -> DEF type iden LPAREN error RPAREN . func_choice
    (5) func_choice -> . LBRACE body RBRACE
    (6) func_choice -> . RETURN expr SEMICOLON

    LBRACE          shift and go to state 23
    RETURN          shift and go to state 24

    func_choice                    shift and go to state 25

state 21

    (30) flist -> type iden COMMA . flist
    (28) flist -> . empty
    (29) flist -> . type iden
    (30) flist -> . type iden COMMA flist
    (69) empty -> .
    (34) type -> . INT_TYPE
    (35) type -> . VECTOR_TYPE
    (36) type -> . STR_TYPE
    (37) type -> . NULL_TYPE

    RPAREN          reduce using rule 69 (empty -> .)
    INT_TYPE        shift and go to state 7
    VECTOR_TYPE     shift and go to state 8
    STR_TYPE        shift and go to state 9
    NULL_TYPE       shift and go to state 10

    type                           shift and go to state 14
    flist                          shift and go to state 26
    empty                          shift and go to state 17

state 22

    (3) func -> DEF type iden LPAREN flist RPAREN func_choice .

    DEF             reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    $end            reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    error           reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    IF              reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    WHILE           reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    FOR             reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    RETURN          reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    LBRACE          reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    LBRACKET        reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    NOT             reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    PLUS            reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    MINUS           reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    VAR             reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    IDENTIFIER      reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    NUMBER          reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    STRING          reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    RBRACE          reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)
    ELSE            reduce using rule 3 (func -> DEF type iden LPAREN flist RPAREN func_choice .)


state 23

    (5) func_choice -> LBRACE . body RBRACE
    (7) body -> . empty
    (8) body -> . stmt body
    (9) body -> . error body
    (69) empty -> .
    (10) stmt -> . expr SEMICOLON
    (11) stmt -> . error SEMICOLON
    (12) stmt -> . defvar SEMICOLON
    (13) stmt -> . IF LPAREN expr RPAREN stmt else_choice
    (14) stmt -> . IF LPAREN error RPAREN stmt else_choice
    (17) stmt -> . WHILE LPAREN expr RPAREN stmt
    (18) stmt -> . WHILE LPAREN error RPAREN stmt
    (19) stmt -> . FOR LPAREN iden ASSIGN expr TO expr RPAREN stmt
    (20) stmt -> . FOR LPAREN iden ASSIGN error TO expr RPAREN stmt
    (21) stmt -> . RETURN expr SEMICOLON
    (22) stmt -> . LBRACE body RBRACE
    (23) stmt -> . func
    (38) expr -> . expr LBRACKET expr RBRACKET
    (39) expr -> . expr LBRACKET error RBRACKET
    (40) expr -> . LBRACKET clist RBRACKET
    (41) expr -> . LBRACKET error RBRACKET
    (42) expr -> . expr QUESTIONMARK expr COLON expr
    (43) expr -> . expr QUESTIONMARK expr error expr
    (44) expr -> . expr ASSIGN expr
    (45) expr -> . expr PLUS expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr TIMES expr
    (48) expr -> . expr DIVIDE expr
    (49) expr -> . expr MOD expr
    (50) expr -> . expr GT expr
    (51) expr -> . expr LT expr
    (52) expr -> . expr EQUAL expr
    (53) expr -> . expr GTE expr
    (54) expr -> . expr LTE expr
    (55) expr -> . expr NOT_EQUAL expr
    (56) expr -> . expr OR expr
    (57) expr -> . expr AND expr
    (58) expr -> . NOT expr
    (59) expr -> . PLUS expr
    (60) expr -> . MINUS expr
    (61) expr -> . iden
    (62) expr -> . iden LPAREN clist RPAREN
    (63) expr -> . iden LPAREN error RPAREN
    (64) expr -> . num
    (65) expr -> . str
    (24) defvar -> . VAR type iden defvar_choice
    (25) defvar -> . VAR error iden defvar_choice
    (3) func -> . DEF type iden LPAREN flist RPAREN func_choice
    (4) func -> . DEF type iden LPAREN error RPAREN func_choice
    (66) iden -> . IDENTIFIER
    (68) num -> . NUMBER
    (67) str -> . STRING

    error           shift and go to state 31
    RBRACE          reduce using rule 69 (empty -> .)
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    RETURN          shift and go to state 38
    LBRACE          shift and go to state 27
    LBRACKET        shift and go to state 40
    NOT             shift and go to state 43
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    VAR             shift and go to state 46
    DEF             shift and go to state 4
    IDENTIFIER      shift and go to state 12
    NUMBER          shift and go to state 47
    STRING          shift and go to state 48

    body                           shift and go to state 28
    empty                          shift and go to state 29
    stmt                           shift and go to state 30
    expr                           shift and go to state 32
    defvar                         shift and go to state 33
    iden                           shift and go to state 37
    func                           shift and go to state 39
    num                            shift and go to state 44
    str                            shift and go to state 45

state 24

    (6) func_choice -> RETURN . expr SEMICOLON
    (38) expr -> . expr LBRACKET expr RBRACKET
    (39) expr -> . expr LBRACKET error RBRACKET
    (40) expr -> . LBRACKET clist RBRACKET
    (41) expr -> . LBRACKET error RBRACKET
    (42) expr -> . expr QUESTIONMARK expr COLON expr
    (43) expr -> . expr QUESTIONMARK expr error expr
    (44) expr -> . expr ASSIGN expr
    (45) expr -> . expr PLUS expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr TIMES expr
    (48) expr -> . expr DIVIDE expr
    (49) expr -> . expr MOD expr
    (50) expr -> . expr GT expr
    (51) expr -> . expr LT expr
    (52) expr -> . expr EQUAL expr
    (53) expr -> . expr GTE expr
    (54) expr -> . expr LTE expr
    (55) expr -> . expr NOT_EQUAL expr
    (56) expr -> . expr OR expr
    (57) expr -> . expr AND expr
    (58) expr -> . NOT expr
    (59) expr -> . PLUS expr
    (60) expr -> . MINUS expr
    (61) expr -> . iden
    (62) expr -> . iden LPAREN clist RPAREN
    (63) expr -> . iden LPAREN error RPAREN
    (64) expr -> . num
    (65) expr -> . str
    (66) iden -> . IDENTIFIER
    (68) num -> . NUMBER
    (67) str -> . STRING

    LBRACKET        shift and go to state 40
    NOT             shift and go to state 43
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    IDENTIFIER      shift and go to state 12
    NUMBER          shift and go to state 47
    STRING          shift and go to state 48

    expr                           shift and go to state 49
    iden                           shift and go to state 37
    num                            shift and go to state 44
    str                            shift and go to state 45

state 25

    (4) func -> DEF type iden LPAREN error RPAREN func_choice .

    DEF             reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    $end            reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    error           reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    IF              reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    WHILE           reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    FOR             reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    RETURN          reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    LBRACE          reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    LBRACKET        reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    NOT             reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    PLUS            reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    MINUS           reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    VAR             reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    IDENTIFIER      reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    NUMBER          reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    STRING          reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    RBRACE          reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)
    ELSE            reduce using rule 4 (func -> DEF type iden LPAREN error RPAREN func_choice .)


state 26

    (30) flist -> type iden COMMA flist .

    RPAREN          reduce using rule 30 (flist -> type iden COMMA flist .)


state 27

    (22) stmt -> LBRACE . body RBRACE
    (7) body -> . empty
    (8) body -> . stmt body
    (9) body -> . error body
    (69) empty -> .
    (10) stmt -> . expr SEMICOLON
    (11) stmt -> . error SEMICOLON
    (12) stmt -> . defvar SEMICOLON
    (13) stmt -> . IF LPAREN expr RPAREN stmt else_choice
    (14) stmt -> . IF LPAREN error RPAREN stmt else_choice
    (17) stmt -> . WHILE LPAREN expr RPAREN stmt
    (18) stmt -> . WHILE LPAREN error RPAREN stmt
    (19) stmt -> . FOR LPAREN iden ASSIGN expr TO expr RPAREN stmt
    (20) stmt -> . FOR LPAREN iden ASSIGN error TO expr RPAREN stmt
    (21) stmt -> . RETURN expr SEMICOLON
    (22) stmt -> . LBRACE body RBRACE
    (23) stmt -> . func
    (38) expr -> . expr LBRACKET expr RBRACKET
    (39) expr -> . expr LBRACKET error RBRACKET
    (40) expr -> . LBRACKET clist RBRACKET
    (41) expr -> . LBRACKET error RBRACKET
    (42) expr -> . expr QUESTIONMARK expr COLON expr
    (43) expr -> . expr QUESTIONMARK expr error expr
    (44) expr -> . expr ASSIGN expr
    (45) expr -> . expr PLUS expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr TIMES expr
    (48) expr -> . expr DIVIDE expr
    (49) expr -> . expr MOD expr
    (50) expr -> . expr GT expr
    (51) expr -> . expr LT expr
    (52) expr -> . expr EQUAL expr
    (53) expr -> . expr GTE expr
    (54) expr -> . expr LTE expr
    (55) expr -> . expr NOT_EQUAL expr
    (56) expr -> . expr OR expr
    (57) expr -> . expr AND expr
    (58) expr -> . NOT expr
    (59) expr -> . PLUS expr
    (60) expr -> . MINUS expr
    (61) expr -> . iden
    (62) expr -> . iden LPAREN clist RPAREN
    (63) expr -> . iden LPAREN error RPAREN
    (64) expr -> . num
    (65) expr -> . str
    (24) defvar -> . VAR type iden defvar_choice
    (25) defvar -> . VAR error iden defvar_choice
    (3) func -> . DEF type iden LPAREN flist RPAREN func_choice
    (4) func -> . DEF type iden LPAREN error RPAREN func_choice
    (66) iden -> . IDENTIFIER
    (68) num -> . NUMBER
    (67) str -> . STRING

    error           shift and go to state 31
    RBRACE          reduce using rule 69 (empty -> .)
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    RETURN          shift and go to state 38
    LBRACE          shift and go to state 27
    LBRACKET        shift and go to state 40
    NOT             shift and go to state 43
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    VAR             shift and go to state 46
    DEF             shift and go to state 4
    IDENTIFIER      shift and go to state 12
    NUMBER          shift and go to state 47
    STRING          shift and go to state 48

    body                           shift and go to state 50
    empty                          shift and go to state 29
    stmt                           shift and go to state 30
    expr                           shift and go to state 32
    defvar                         shift and go to state 33
    iden                           shift and go to state 37
    func                           shift and go to state 39
    num                            shift and go to state 44
    str                            shift and go to state 45

state 28

    (5) func_choice -> LBRACE body . RBRACE

    RBRACE          shift and go to state 51


state 29

    (7) body -> empty .

    RBRACE          reduce using rule 7 (body -> empty .)


state 30

    (8) body -> stmt . body
    (7) body -> . empty
    (8) body -> . stmt body
    (9) body -> . error body
    (69) empty -> .
    (10) stmt -> . expr SEMICOLON
    (11) stmt -> . error SEMICOLON
    (12) stmt -> . defvar SEMICOLON
    (13) stmt -> . IF LPAREN expr RPAREN stmt else_choice
    (14) stmt -> . IF LPAREN error RPAREN stmt else_choice
    (17) stmt -> . WHILE LPAREN expr RPAREN stmt
    (18) stmt -> . WHILE LPAREN error RPAREN stmt
    (19) stmt -> . FOR LPAREN iden ASSIGN expr TO expr RPAREN stmt
    (20) stmt -> . FOR LPAREN iden ASSIGN error TO expr RPAREN stmt
    (21) stmt -> . RETURN expr SEMICOLON
    (22) stmt -> . LBRACE body RBRACE
    (23) stmt -> . func
    (38) expr -> . expr LBRACKET expr RBRACKET
    (39) expr -> . expr LBRACKET error RBRACKET
    (40) expr -> . LBRACKET clist RBRACKET
    (41) expr -> . LBRACKET error RBRACKET
    (42) expr -> . expr QUESTIONMARK expr COLON expr
    (43) expr -> . expr QUESTIONMARK expr error expr
    (44) expr -> . expr ASSIGN expr
    (45) expr -> . expr PLUS expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr TIMES expr
    (48) expr -> . expr DIVIDE expr
    (49) expr -> . expr MOD expr
    (50) expr -> . expr GT expr
    (51) expr -> . expr LT expr
    (52) expr -> . expr EQUAL expr
    (53) expr -> . expr GTE expr
    (54) expr -> . expr LTE expr
    (55) expr -> . expr NOT_EQUAL expr
    (56) expr -> . expr OR expr
    (57) expr -> . expr AND expr
    (58) expr -> . NOT expr
    (59) expr -> . PLUS expr
    (60) expr -> . MINUS expr
    (61) expr -> . iden
    (62) expr -> . iden LPAREN clist RPAREN
    (63) expr -> . iden LPAREN error RPAREN
    (64) expr -> . num
    (65) expr -> . str
    (24) defvar -> . VAR type iden defvar_choice
    (25) defvar -> . VAR error iden defvar_choice
    (3) func -> . DEF type iden LPAREN flist RPAREN func_choice
    (4) func -> . DEF type iden LPAREN error RPAREN func_choice
    (66) iden -> . IDENTIFIER
    (68) num -> . NUMBER
    (67) str -> . STRING

    error           shift and go to state 31
    RBRACE          reduce using rule 69 (empty -> .)
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    RETURN          shift and go to state 38
    LBRACE          shift and go to state 27
    LBRACKET        shift and go to state 40
    NOT             shift and go to state 43
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    VAR             shift and go to state 46
    DEF             shift and go to state 4
    IDENTIFIER      shift and go to state 12
    NUMBER          shift and go to state 47
    STRING          shift and go to state 48

    stmt                           shift and go to state 30
    body                           shift and go to state 52
    empty                          shift and go to state 29
    expr                           shift and go to state 32
    defvar                         shift and go to state 33
    iden                           shift and go to state 37
    func                           shift and go to state 39
    num                            shift and go to state 44
    str                            shift and go to state 45

state 31

    (9) body -> error . body
    (11) stmt -> error . SEMICOLON
    (7) body -> . empty
    (8) body -> . stmt body
    (9) body -> . error body
    (69) empty -> .
    (10) stmt -> . expr SEMICOLON
    (11) stmt -> . error SEMICOLON
    (12) stmt -> . defvar SEMICOLON
    (13) stmt -> . IF LPAREN expr RPAREN stmt else_choice
    (14) stmt -> . IF LPAREN error RPAREN stmt else_choice
    (17) stmt -> . WHILE LPAREN expr RPAREN stmt
    (18) stmt -> . WHILE LPAREN error RPAREN stmt
    (19) stmt -> . FOR LPAREN iden ASSIGN expr TO expr RPAREN stmt
    (20) stmt -> . FOR LPAREN iden ASSIGN error TO expr RPAREN stmt
    (21) stmt -> . RETURN expr SEMICOLON
    (22) stmt -> . LBRACE body RBRACE
    (23) stmt -> . func
    (38) expr -> . expr LBRACKET expr RBRACKET
    (39) expr -> . expr LBRACKET error RBRACKET
    (40) expr -> . LBRACKET clist RBRACKET
    (41) expr -> . LBRACKET error RBRACKET
    (42) expr -> . expr QUESTIONMARK expr COLON expr
    (43) expr -> . expr QUESTIONMARK expr error expr
    (44) expr -> . expr ASSIGN expr
    (45) expr -> . expr PLUS expr
    (46) expr -> . expr MINUS expr
    (47) expr -> . expr TIMES expr
    (48) expr -> . expr DIVIDE expr
    (49) expr -> . expr MOD expr
    (50) expr -> . expr GT expr
    (51) expr -> . expr LT expr
    (52) expr -> . expr EQUAL expr
    (53) expr -> . expr GTE expr
    (54) expr -> . expr LTE expr
    (55) expr -> . expr NOT_EQUAL expr
    (56) expr -> . expr OR expr
    (57) expr -> . expr AND expr
    (58) expr -> . NOT expr
    (59) expr -> . PLUS expr
    (60) expr -> . MINUS expr
    (61) expr -> . iden
    (62) expr -> . iden LPAREN clist RPAREN
    (63) expr -> . iden LPAREN error RPAREN
    (64) expr -> . num
    (65) expr -> . str
    (24) defvar -> . VAR type iden defvar_choice
    (25) defvar -> . VAR error iden defvar_choice
    (3) func -> . DEF type iden LPAREN flist RPAREN func_choice
    (4) func -> . DEF type iden LPAREN error RPAREN func_choice
    (66) iden -> . IDENTIFIER
    (68) num -> . NUMBER
    (67) str -> . STRING
